# UniVidX_ComfyUI

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  ROADMAP_v0.3.md  __init__.py  conftest.py  install.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish_action.yml  smoke.yml
assets/: _build_LTX_quads.py  _build_workflow_png.py
examples/: I_video_output.json  I_video_output_api.json  J_alpha_compositing.json  J_alpha_compositing_api.json  R2AIN_basic.json  R2AIN_basic_api.json  R2AIN_video_api.json  R2PFB_basic.json  R2PFB_basic_api.json  R2PFB_video_api.json  README.md  _audit_kijai_fp8.py  _bench_fp8_prequantized.py  _bench_fp8_tiny.py  _bench_matrix_040.py  _bench_perf.py  _bench_vram_buffer.py  _build_ui_workflows.py  _build_video_workflows.py  _build_workflow.py  _compare_distill_psnr.py  _gif_demo_runner.py  _run_fp8_distill.py  _sanity_a1.py  _sanity_fp8_prequantized.py  _smoke_fp8.py  _smoke_runner.py  _smoke_runner_R2AIN.py  _smoke_runner_tiny.py  _smoke_step_distill.py  chunked_clip_sampler.py  t2RAIN_basic.json  t2RAIN_basic.mmd  t2RAIN_basic_api.json  t2RAIN_tiny_api.json  t2RPFB_basic.json  t2RPFB_basic_api.json
nodes/: decoder.py  loader.py  sampler.py  task.py
src/: fp8_loader.py  lora_merge.py  modes.py  path_resolver.py  runtime.py  tensor_io.py
tests/: test_chunk_planner.py  test_fp8_loader.py  test_loader_dit_weight_mode.py  test_lora_merge.py  test_modes.py  test_path_resolver.py  test_runtime_cache_key.py  test_runtime_drop_out.py  test_runtime_patches.py  test_tensor_io.py
(+14 files in other folders)
